@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.545 2021-04-07 18:53:31+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.546 2021-04-15 17:45:28+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.545 2021-04-07 18:53:31+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.546 2021-04-15 17:45:28+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -6019,6 +6019,11 @@ if [ $# -lt 1 ] ; then
 	echo "rmsvc service_with_full_path" 1>&2
 	return 1
 fi
+if [ -d /run ] ; then
+	rundir=/run/svscan
+elif [ -d /var/run ] ; then
+	rundir=/var/run/svscan
+fi
 for i in $*
 do
 	if [ ! -d $i ] ; then
@@ -6027,17 +6032,36 @@ do
 	fi
 	dir=`dirname $i`
 	svcname=`basename $i`
-	if [ ! -p $i/supervise/control ] ; then
-		echo "$i/supervise not a supervise directory" 1>&2
+	if [ -n "$rundir" ] ; then
+		if [ ! -p $rundir/$svcname/supervise/control ] ; then
+			echo "$i/supervise not a supervise directory" 1>&2
+			continue
+		fi
+	else
+		if [ ! -p $i/supervise/control ] ; then
+			echo "$i/supervise not a supervise directory" 1>&2
+			continue
+		fi
+	fi
+	/bin/mv $i $dir/"."${svcname}
+	if [ $? -ne 0 ] ; then
 		continue
 	fi
-	/bin/mv $i $dir/".""$svcname"
+	if [ -n "$rundir" ] ; then
+		/bin/mv $rundir/$svcname $rudir/"."${svcname}
+		if [ $? -ne 0 ] ; then
+			continue
+		fi
+		dir=$rundir
+	fi
 	#
 	# prepend a . to the directory so that svscan will skip this directory
 	#
-	echo "Removed Service $svcname    : `"$DESTDIR"$QmailBinPrefix/bin/svc -d $dir/"."$svcname 2>&1`"
+	echo "Removed Service $svcname"
+	"$DESTDIR"$QmailBinPrefix/bin/svc -dx $dir/"."${svcname}
 	if [ -d $dir/"."$svcname/log ] ; then
-		echo "Removed Service $svcname/log: `"$DESTDIR"$QmailBinPrefix/bin/svc -d $dir/"."$svcname/log 2>&1`"
+		echo "Removed Service $svcname/log"
+		"$DESTDIR"$QmailBinPrefix/bin/svc -dx $dir/"."${svcname}/log
 	fi
 done
 }
@@ -6047,6 +6071,11 @@ ensvc()
 if [ $# -lt 1 ] ; then
 	echo "ensvc service_with_full_path" 1>&2
 	return 1
+fi
+if [ -d /run ] ; then
+	rundir=/run/svscan
+elif [ -d /var/run ] ; then
+	rundir=/var/run/svscan
 fi
 for i in $*
 do
@@ -6060,6 +6089,9 @@ do
 	if [ " $first_char" = " ." ] ; then
 		svcname=`echo $svcname | cut -c2-`
 		/bin/mv $i $dir/$svcname
+		if [ -n "$rundir" ] ; then
+			/bin/rm -rf $rundir/"."${svcname}
+		fi
 		echo "Enabled Service $svcname" 
 	else
 		echo "Service $i is not disabled (should have a '.' as the first char in $svcname)" 1>&2
